# EvieGreeter

./: Cargo.toml  README.md  flake.nix  hyprland.conf
src/: config.rs  greeter.rs  ipc.rs  main.rs  session.rs  style.rs  users.rs
src/ui/: clock.rs  login_card.rs  mod.rs  window.rs
