[package]
name = "evie-greeter"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.10.3"
gtk4-layer-shell = "0.7.1"
libadwaita = { version = "0.8.1", features = ["v1_6"] }
glib = "0.22.2"
gio = "0.22"
tokio = { version = "1.49.0", features = ["full"] }
async-channel = "2.5.0"
greetd_ipc = { version = "0.10", features = ["tokio-codec"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
zbus = { version = "5", features = ["tokio"] }
libc = "0.2"
futures-util = { version = "0.3", features = ["sink"] }
